@@ -83,7 +83,7 @@ with my early design ideas</li>
 <li>And our bug hunters above and beyond:
     Angus, Guillaume Proux, Frank Raiser,
     Austin Henry, Kaweh Kazemi, Arturo Aldama,
-    Mike Mulcheck</li>
+    Mike Mulcheck, Rene Dudfield</li>
 </p><p>
 There's many more folks out there who've submitted helpful ideas,
 kept this project going, and basically made my life easer, Thanks!
